# deepface-realtime-fastapi

./: .gitignore  README.md  db.py  faces.db  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: create_icon.py  db.py
backend/static/: script.js  style.css
backend/templates/: index.html
electron/: main.js  preload.js
static/: script.js
templates/: index.html
