[project]
name = "deepface-realtime-fastapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepface>=0.0.93",
    "fastapi>=0.115.12",
    "jinja2==3.1.3",
    "numpy>=2.1.3",
    "opencv-python",
    "opencv-python-headless>=4.11.0.86",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.20",
    "tensorflow>=2.19.0",
    "tf-keras>=2.19.0",
    "uvicorn>=0.34.2",
    "websockets>=15.0.1",
]
